--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layouts/layout1}">
 
 <head>
-    <link rel="stylesheet" href="/webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
 
 </head>
@@ -12,26 +12,27 @@
 <header th:insert="fragments/header.html"></header>
 
 
-    <!-- 검색창 부분 -->
-    <div layout:fragment="content" class="text-center" style="margin-top: 100px;">
-            <form class="form-inline justify-content-center">
-                    <div class="input-group">
-                    <div class="input-group-prepend">
-                        <button class="btn btn-outline-secondary dropdown-toggle" type="button"
-                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            전체</button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">제목</a>
-                            <a class="dropdown-item" href="#">본문</a>
-                        </div>
+<!-- 검색창 부분 -->
+<div layout:fragment="content" class="text-center" style="margin-top: 100px;">
+    <form action="/">
+        <form class="form-inline justify-content-center">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <button class="btn btn-outline-secondary dropdown-toggle" type="button"
+                            id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        전체</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="#">제목</a>
+                        <a class="dropdown-item" href="#">본문</a>
                     </div>
-                    <input name="searchQuery" class="form-control mr-sm-2"
-                           type="search" placeholder="검색어를 입력하세요." aria-label="Search"
-                           style="width: 450px;">
-                    <button class="btn btn-outline-success my-2 my-sm-0"
-                            type="submit">검색</button>
                 </div>
-            </form>
+                <input name="searchQuery" class="form-control mr-sm-2"
+                       type="search" placeholder="검색어를 입력하세요." aria-label="Search"
+                       style="width: 450px;">
+                <button class="btn btn-outline-success my-2 my-sm-0"
+                        type="submit">검색</button>
+            </div>
+        </form>
 
         <!-- 테이블 부분 -->
         <div class="table-container">
@@ -125,31 +126,31 @@
                     </div>
                 </div>
                 <!-- 페이지 버튼 -->
-                    <div class="pagination justify-content-center" style="margin-top: 100px;">
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                                <li class="page-item disabled">
-                                    <a class="page-link" href="#" tabindex="-1">이전</a>
-                                </li>
-                                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item"><a class="page-link" href="#">4</a></li>
-                                <li class="page-item"><a class="page-link" href="#">5</a></li>
-                                <li class="page-item"><a class="page-link" href="#">6</a></li>
-                                <li class="page-item"><a class="page-link" href="#">7</a></li>
-                                <li class="page-item"><a class="page-link" href="#">8</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">다음</a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
+                <div class="pagination justify-content-center" style="margin-top: 100px;">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li class="page-item disabled">
+                                <a class="page-link" href="#" tabindex="-1">이전</a>
+                            </li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">4</a></li>
+                            <li class="page-item"><a class="page-link" href="#">5</a></li>
+                            <li class="page-item"><a class="page-link" href="#">6</a></li>
+                            <li class="page-item"><a class="page-link" href="#">7</a></li>
+                            <li class="page-item"><a class="page-link" href="#">8</a></li>
+                            <li class="page-item">
+                                <a class="page-link" href="#">다음</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
 
             </div>
         </div>
-    </div>
-
+    </form>
+</div>
 </body>
 </html>
 
