--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -217,6 +217,16 @@ ul#commentList li {
   color: black;
 }
 
+.textarea-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.btn-group-vertical {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 
 
@@ -257,7 +267,22 @@ ul#commentList li {
     th:nth-child(3), td:nth-child(3), th:nth-child(4), td:nth-child(4), th:nth-child(5), td:nth-child(5) {
         width: 10%;
     }
+/* main 검색 부분 */
 
+.search2 {
+  background-color: #feec9e;
+  color: #7c6839;
+}
+
+.search1{
+  background-color: #feec9e;
+  color: #7c6839;
+}
+
+#my-sort {
+  background-color: #feec9e;
+  color: #7c6839;
+}
 
 
 /* main button 부분 */
@@ -379,19 +404,17 @@ button#dMB3 {       /*버튼 글쓰기 부분 */
 /* 좋아요 부분 */
 
 
-.like-button {
+#like-icon {
   margin-left: 20px;
   background-color: #feec9e; /* 배경색상 */
   border-color: none; /* 테두리 없앰 */
   color: #7c6839;   /* 글자 색 */
 }
 
-.like-button:hover {
+#like-icon:hover {
   background-color: #ff0044; /* 배경색상 */
   color: #fff9e4;
 }
 
-.like-button.active {
-  background-color: #ff0044;
-}
+
 
