--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -59,13 +59,17 @@
                         </div>
                         <p th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="fieldError">Incorrect data</p>
 
+<!--                        <form role="form" method="post" enctype="multipart/form-data" th:object="${BoardFormDto}">-->
                         <div class="form-group">
-                            <label for="inputHashtag" ><strong>해시태그</strong></label>
+                            <label for="hashtags"><strong>해시태그</strong></label>
                             <div class="hashtag-container">
-                                <input type="text" name="hashtag" class="form-control hashtag-input" id="inputHashtag" />
-                                <button type="button" class="btn btn-primary btn-add">+</button>
+                                <div class="hashtag-input-group">
+                                    <input name="hashtags" id="hashtags" type="text" placeholder="해시태그">
+                                    <button type="hidden" class="btn btn-primary btn-add">+</button>
+                                </div>
                             </div>
                         </div>
+<!--                        </form>-->
 
 
                         <div class="form-group">
@@ -89,17 +93,6 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!--                        <div class="form-group">-->
-                        <!--                            <label for="inputFile"><strong>파일 첨부</strong></label>-->
-                        <!--                            <div class="file-container">-->
-                        <!--                                <input type="text" name="file-path" class="form-control file-path" id="inputFile" readonly />-->
-                        <!--                                <button type="button" class="btn btn-primary btn-file">파일 첨부</button>-->
-
-                        <!--                                <button type="button" class="btn btn-primary btn-add" id="addButton">+</button>-->
-                        <!--                                <button type="button" class="btn btn-danger btn-remove" id="removeButton">-</button>-->
-                        <!--                            </div>-->
-                        <!--                        </div>-->
 
 
                         <div class="form-group text-center">
