--- a/src/main/resources/templates/contentview.html
+++ b/src/main/resources/templates/contentview.html
@@ -3,143 +3,211 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 <head>
-  <meta charset="UTF-8" />
-  <title>게시판 상세페이지</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/css/style.css" />
+    <meta charset="UTF-8" />
+    <title>게시판 상세페이지</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <script>
+    $(document).ready(function () {
 
+      let likeVal = document.getElementById("like_check").value;
+
+      console.log(likeVal);
+
+           const boardId = $("#BoardId").val();
+    const userId = $("#userId").val();
+    console.log(boardId);
+    console.log(userId);
+    $.ajax({
+      type: "POST",
+      contentType: "application/json",
+      url: "/hbrg/like/ex02/" + boardId + "?userId=" + userId,
+      dataType: 'json',
+      data: JSON.stringify({ users: {userId: userId}, boardId, boardId}),
+      cache: false,
+      timeout: 600000,
+      success: function (data) {
+        if (data != false) {
+          console.log("좋아요");
+        } else {
+          console.log("싫어요");
+        }
+      }
+    });
+  });
+
+
+ function showReReplyForm(button) {
+        // 대댓글 작성 버튼을 클릭한 댓글 요소
+        var replyElement = button.closest('.reply-list');
+        // 대댓글 작성 폼 요소
+        var formElement = replyElement.querySelector('.reply-form');
+        // 대댓글 목록 요소
+        var reCommentListElement = formElement.querySelector('#reCommentList');
+        // 대댓글 작성 폼 요소의 현재 상태
+        var formDisplay = formElement.style.display;
+
+        // 대댓글 작성 폼 요소의 현재 상태를 확인하여 보이게 하거나 안보이게 함
+        if (formDisplay === 'none') {
+            formElement.style.display = 'block';
+<!--            reCommentListElement.style.display = 'block';-->
+
+        } else {
+            formElement.style.display = 'none';
+<!--            reCommentListElement.style.display = 'block';-->
+
+        }
+    }
+
+
+
+</script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
 <header th:insert="fragments/header.html"></header>
 <img src="../img/home.png" alt="home image" width="120" height="80" />
 <div layout:fragment="content">
 
-  <input type="hidden" id="BoardId" th:value="${BoardFormDto.boardId}">
+    <input type="hidden" id="BoardId" th:value="${BoardFormDto.boardId}">
 
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-8">
-        <div role="form" method="post" enctype="multipart/form-data">
-          <div class="form-container">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div role="form" method="post" enctype="multipart/form-data">
+                    <div class="form-container">
 
-            <div class="form-group">
-              <div class="title-container">
-                <label th:for="inputTitle"><strong>제목</strong></label>
-                <button type="button" class="btn btn-primary like-button" onclick="likeButtonClick()">❤</button>
-              </div>
-              <input type="text" name="title" class="form-control" id="inputTitle" th:value="${BoardFormDto.title}" readonly />
+                        <div class="form-group">
+                            <div class="title-container">
+                                <label th:for="inputTitle"><strong>제목</strong></label>
+                                <input type="hidden" th:id="like_check" th:value="${heart}">
+                                <button type="button"  th:id="like-icon">❤</button>
+                            </div>
+                            <input type="text" name="title" class="form-control" id="inputTitle" th:value="${BoardFormDto.title}" readonly />
+                        </div>
+
+                        <div class="form-group">
+                            <div class="picture">
+                                <!--                <img th:sr="${BoardFormDto.fileDtoList[0].fileUrl}" class = "rounded repImg" th:alt="${BoardFormDto.boardId}">-->
+                            </div>
+                            <label for="inputContent"><strong>내용</strong></label>
+                            <p class="form-control my-textarea" aria-label="With textarea"
+                               th:text="${BoardFormDto.content}" name="content" id="inputContent" rows="5"></p>
+                        </div>
+
+
+                        <label th:for="inputHashtag" ><strong>해시태그</strong></label>
+                        <!--              <div th:each="hashList, status: ${hashList}">-->
+                        <!--                  <a th:href="'/hashtag?hashtag='+ ${hashList.hashName}" th:text="'#' + ${hashList.hashName}"></a>-->
+                        <!--              </div>-->
+
+
+                        <div class="form-group">
+                            <div class="hashtag-container">
+                                <input type="text" name="hashtag" class="form-control hashtag-input" id="inputHashtag" />
+                                <button type="button" class="btn btn-primary btn-add">+</button>
+                            </div>
+                        </div>
+
+                        <!--댓글 html 시작 -->
+                        <!-- 댓글 목록 -->
+                        <div class="form-group">
+                            <label for="commentList"><strong>댓글 목록</strong></label>
+                            <div class="comment-list-container">
+                                <ul id="commentList">
+                                    <!-- 댓글 -->
+                                    <li class="reply-list" th:each="reply: ${replies}">
+                                        <!-- 댓글 작성자 정보 -->
+                                        <img th:src="@{/img/panda.png}" alt="판다캐릭터">
+                                        <span class="reply-author">(익명)</span>
+                                        <!-- 댓글 내용 -->
+                                        <span th:text="${reply.reContent}" style="display:none;"></span>
+                                        <textarea class="form-control" style="border: none; resize: none;" readonly th:text="${reply.reContent}"></textarea>
+
+                                        <!-- 대댓글 작성 버튼 -->
+                                        <button type="button" class="btn btn-link btn-sm" onclick="showReReplyForm(this)">대댓글 달기</button>
+
+                                        <!-- 대댓글 리스트 -->
+                                        <ul id="reCommentList" th:if="${#vars['reReplies_' + reply.reId]}">
+                                            <li class="rereply-list" th:each="reReply : ${#vars['reReplies_' + reply.reId]}">
+                                                <span th:text="${reReply.reReContent}" style="display:none;"></span>
+                                                <textarea class="form-control" style="border: none; resize: none;" readonly th:text="${reReply.reReContent}"></textarea>
+                                            </li>
+                                        </ul>
+
+                                        <!-- 대댓글 작성 폼 -->
+                                        <form class="reply-form" style="display: none;" th:action="@{'/hbrg/' + ${reply.reId} +'/reReply' }" method="post"
+                                              th:object="${reReplyFormDto}">
+                                            <div class="form-group">
+                                                <label th:for="inputReComment">대댓글 내용</label>
+                                                <div class="comment-container">
+                                                    <input type="text" th:field="*{reReContent}" name="reComment" class="form-control comment-input" id="inputReComment" />
+                                                    <button type="submit" class="btn btn-primary btn-comment btn-sm">작성하기</button>
+                                                </div>
+                                            </div>
+
+                                            <input type="hidden" name="boardId" th:value="${BoardFormDto.boardId}"/>
+                                            <input type="hidden" th:field="*{reId}" th:value="${reply.reId}"/>
+                                            <input type="hidden" name="reId" value="${reply.reId}" />
+                                        </form>
+
+
+
+                                        <div class="btn-group" style="float: right;">
+                                            <!-- 수정 버튼 -->
+                                            <button type="button" class="btn btn-primary btn-sm btn-comment-action"
+                                                    th:data-reid="${reply.reId}"
+                                                    th:data-recontent="${reply.reContent}"
+                                                    onclick="editReply(this)">
+                                                <img src="/img/edit.png" alt="Edit" width="16" height="16">
+                                            </button>
+                                            <!-- 삭제 버튼 -->
+                                            <form th:action="@{'/hbrg/' + ${reply.reId} +'/delete' }" method="post"
+                                                  th:object="${BoardFormDto}">
+                                                <input type="hidden" value="delete"/>
+                                                <input type="hidden" name="boardId" th:value="${BoardFormDto.boardId}"/>
+                                                <button type="submit" class="btn btn-danger btn-sm btn-comment-action">
+                                                    <img src="/img/delete.png" alt="Delete" width="16" height="16">
+                                                </button>
+                                            </form>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <form role="form" method="post" enctype="multipart/form-data" th:object="${replyFormDto}">
+                            <!-- 댓글 부분 -->
+                            <div class="form-group">
+                                <label for="inputComment"><strong>댓글</strong></label>
+                                <div class="comment-container">
+                                    <input type="hidden"  th:field="*{board}" th:value="${replyFormDto.board}">
+                                    <input type="text" th:field="*{reContent}" name="comment" class="form-control comment-input" id="inputComment" />
+                                    <button type="submit" class="btn btn-primary btn-comment btn-sm">댓글달기</button>
+                                </div>
+                            </div>
+                        </form>
+
+
+                        <!-- 페이지 수정 삭제-->
+                        <div class="form-group">
+                            <div class="btn-margin">
+                                <button type="button" class="btn btn-primary writeButton" th:href="@{'/hbrg/ex01/'+${BoardFormDto.boardId}}" onclick="location.href=this.getAttribute('href')">수정</button>
+                                <!--              글삭제(23/04/18 16:58)-->
+                                <!--                <button type="button" class="btn btn-secondary cancelButton" th:href="@{'/hbrg/ex02/delete/'+${BoardFormDto.boardId}}" onclick="location.href=this.getAttribute('href')">삭제</button>-->
+                                <button type="button" class="btn btn-secondary cancelButton" th:href="@{/hbrg/ex02/delete/{boardId}(boardId=${BoardFormDto.boardId})}" onclick="location.href=this.getAttribute('href')">삭제</button>
+
+                                <button onclick="location.href='/'" type="button" class="btn btn-secondary listButton">목록</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div class="form-group">
-              <div class="picture">
-              </div>
-                <label for="inputContent"><strong>내용</strong></label>
-              <p class="form-control my-textarea" aria-label="With textarea" th:text="${BoardFormDto
-              .content}" name="content" id="inputContent" rows="5"></p>
-            </div>
-
-
-
-            <div class="form-group">
-              <label for="inputHashtag" ><strong>해시태그</strong></label>
-              <div class="hashtag-container">
-                <input type="text" name="hashtag" class="form-control hashtag-input" id="inputHashtag" />
-                <button type="button" class="btn btn-primary btn-add">+</button>
-              </div>
-            </div>
-
-
-              <!-- 댓글 목록 -->
-              <div class="form-group">
-                  <label for="commentList"><strong>댓글 목록</strong></label>
-                  <div class="comment-list-container">
-                      <ul id="commentList" th:each="reply: ${replies}">
-                          <li class="reply-list">
-                              <img th:src="@{/img/panda.png}" alt="판다캐릭터">
-                              <span class="reply-author">(익명)</span>
-                              <span th:text="${reply.reContent}"></span>
-                              <div class="btn-group" style="float: right;">
-                                  <button type="button" class="btn btn-primary btn-sm btn-comment-action">
-                                      <img src="/img/edit.png" alt="Edit" width="16" height="16">
-                                  </button>
-                                  <button type="button" class="btn btn-danger btn-sm btn-comment-action">
-                                      <img src="/img/delete.png" alt="Delete" width="16" height="16">
-                                  </button>
-                              </div>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-
-              <form role="form" method="post" enctype="multipart/form-data" th:object="${replyFormDto}">
-
-                  <!-- 댓글 부분 -->
-                  <div class="form-group">
-                      <label for="inputComment"><strong>댓글</strong></label>
-                      <div class="comment-container">
-                          <input type="hidden"  th:field="*{board}" th:value="${replyFormDto.board}">
-                          <input type="text" th:field="*{reContent}" name="comment" class="form-control comment-input" id="inputComment" />
-                          <button type="submit" class="btn btn-primary btn-comment btn-sm">댓글달기</button>
-                      </div>
-                  </div>
-              </form>
-
-
-
-            <!-- 페이지 수정 삭제-->
-            <div class="form-group">
-              <div class="btn-margin">
-                <button type="button" class="btn btn-primary writeButton" th:href="@{'/hbrg/ex01/'+${BoardFormDto.boardId}}" onclick="location.href=this.getAttribute('href')">수정</button>
-                <!--              글삭제(23/04/18 16:58)-->
-                <!--                <button type="button" class="btn btn-secondary cancelButton" th:href="@{'/hbrg/ex02/delete/'+${BoardFormDto.boardId}}" onclick="location.href=this.getAttribute('href')">삭제</button>-->
-                <button type="button" class="btn btn-secondary cancelButton" th:href="@{/hbrg/ex02/delete/{boardId}(boardId=${BoardFormDto.boardId})}" onclick="location.href=this.getAttribute('href')">삭제</button>
-
-                <button onclick="location.href='/'" type="button" class="btn btn-secondary listButton">목록</button>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 </div>
 
-<script>
-// 내용
-var textarea = document.querySelector(".my-textarea");
 
-textarea.addEventListener("input", function(){
-  this.style.height = "auto";
-  this.style.height = (this.scrollHeight) + "px";
-});
-
-
-
-function likeButtonClick() {
-  var btn = document.querySelector(".like-button");
-  btn.classList.toggle("active");
-}
-
-  // 게시글 ID 가져오기
-  var boardId = document.querySelector('#BoardId').value;
-
-  // 좋아요 요청 보내기
-  fetch('/like/' + boardId, { method: 'POST' })
-    .then(response => response.json())
-    .then(data => {
-      // 좋아요 버튼 텍스트 업데이트
-      var btnLike = document.querySelector('.like-button');
-      if (data.liked) {
-        btnLike.textContent = '취소하기';
-      } else {
-        btnLike.textContent = '좋아요';
-      }
-    })
-    .catch(error => console.error(error));
-}
-
-
-</script>
 </body>
 </html>
